chore(pom): increse surefire perm size for powermock