@@ -125,6 +125,7 @@
             <artifactId>maven-surefire-plugin</artifactId>
             <version>2.17</version>
             <configuration>
+              <argLine>-XX:PermSize=128m -XX:MaxPermSize=256m</argLine>
               <excludes>
                 <exclude>**/javascript/**</exclude>
               </excludes>
